<resources>
    <string name="app_name">Audlayer</string>
    <string name="soon_feature">Feature will be added soon</string>
    <string name="open_folder">Open folder</string>
    <string name="open_album">Open album</string>
    <string name="open_songs">Open all songs</string>
    <string name="open_radio">Open radio stations</string>
    <string name="open_vk">Open your vk music</string>
    <string name="folder">Folder</string>
    <string name="albums">Album</string>
    <string name="songs">Song</string>
    <string name="radio">Radio</string>
    <string name="vk">VK</string>
    <string name="add_song_hint">Choose Song</string>
    <string name="add_song_select_all">Select All</string>
    <string name="add_song_continue">Continue</string>
    <string name="add_to_playlist_hint">Add to Playlist</string>
    <string name="add_to_playlist_create_new">Create New Playlist</string>
    <string name="add_to_playlist_name">Playlist name</string>
    <string name="add_to_playlist_bottom_hint">Identical Songs Will not Be Added</string>
    <string name="add_to_playlist_delete">Delete</string>
    <string name="add_to_playlist_item">%1$s \nContain: %2$d</string>
    <string name="mini_player_song_no_information">No Song Are Selected</string>
    <string name="mini_player_song_high_quality">HQ</string>
    <string name="mini_player_song_image">Image of song</string>
    <string name="mini_player_song_shuffle">Shuffle songs</string>
    <string name="mini_player_song_repeat">Repeat song</string>
    <string name="mini_player_song_liked">Like song</string>
    <string name="mini_player_song_skip_prev">Start playing previous song</string>
    <string name="mini_player_song_skip_next">Start playing next song</string>
    <string name="mini_player_song_play_or_pause">Play or pause song</string>
    <string name="mini_player_song_start_song">00: 00</string>
    <string name="mini_player_song_end_song">04: 00</string>
    <string name="mini_player_stop_and_hide">Scroll to Stop and Hide Player</string>
    <string name="mini_player_hide">Scroll to Hide Player</string>
    <string name="backPressed">Tap Again to Exit</string>
    <string name="folder_fragment_item_icon">File icon</string>
    <string name="folder_fragment_item_path">File path</string>
    <string name="folder_fragment_item_action">File action</string>
    <string name="folder_fragment_rv_item">%1$s \nMb: %2$s %3$s</string>
    <string name="action_bar_hint_folder">Find Audio</string>
    <string name="action_bar_hint_album">Playlist | Album</string>
    <string name="action_bar_hint_select_song">Choose Song</string>
    <string name="action_bar_hint_song">All Audio</string>
    <string name="action_bar_hint_vk">Vk Playlist</string>
    <string name="action_bar_hint_radio">Radio</string>
    <string name="action_bar_hint_search_view">Type to find&#8230;</string>
    <string name="action_bar_settings">Settings Button</string>
    <string name="action_bar_action">Action Button</string>
    <string name="pop_up_menu_item_play">Play</string>
    <string name="pop_up_menu_item_play_next">Play Next</string>
    <string name="pop_up_menu_item_shuffle">Shuffle</string>
    <string name="pop_up_menu_item_create_playlist">Create Playlist</string>
    <string name="pop_up_menu_item_add_to_playlist">Add to Playlist</string>
    <string name="pop_up_menu_item_add_to_home_screen">Add to Home Screen</string>
    <string name="pop_up_menu_item_set_as_ringtone">Set as Ringtone</string>
    <string name="pop_up_menu_item_show_incompatible_files">Show incompatible files</string>
    <string name="pop_up_menu_item_sort_by">Sort By:</string>
    <string name="pop_up_menu_item_sort_by_date_added">Date Added</string>
    <string name="pop_up_menu_item_sort_by_name">Name</string>
    <string name="pop_up_menu_item_sort_by_artist">Artist</string>
    <string name="pop_up_menu_item_sort_by_album">Album</string>
    <string name="pop_up_menu_item_sort_by_number_of_tracks">Number of Tracks</string>
    <string name="pop_up_menu_item_sort_by_year">Year</string>
    <string name="pop_up_menu_item_sort_by_duration">Duration</string>
    <string name="pop_up_menu_item_sort_by_size">Size</string>
    <string name="pop_up_menu_item_sort_by_ascending_order">Ascending Order</string>
    <string name="pop_up_menu_item_sort_by_descending_order">Descending Order</string>
    <string name="create_new_playlist_hint">Type&#8230;</string>
    <string name="create_new_playlist_name">Name</string>
    <string name="create_new_playlist_cancel">Cancel</string>
    <string name="create_new_playlist_apply">Apply</string>
    <string name="album_album">Albums</string>
    <string name="album_playlist">Playlists</string>
    <string name="album_refresh">Refresh</string>
    <string name="album_refreshing">Refreshing&#8230;</string>
    <string name="album_item">%1$s \nContain: %2$d</string>
    <string name="song_rv_item">%1$s \nMb: %2$s Playlist: %3$s %4$s</string>
    <string name="vk_login_enter_your_id_page">Enter your id page</string>
    <string name="vk_login_authorize">Authorize</string>
    <string name="vk_login_vk_admin">App gonna be authorize you through VK Admin</string>
    <string name="vk_login_check_credentials">Check credentials</string>
    <string name="vk_login_email">Email: %1$s</string>
    <string name="vk_login_page">Page id: %1$d</string>
    <string name="vk_login_go_back_at">Go back at: %1$d</string>
    <string name="vk_login_birth_date">Birth date: %1$s</string>
    <string name="vk_base_url">https://api.vk.com/method/</string>
    <string name="vk_rv_item_selected">%1$s - %2$s\n%3$s Mb: %4$s %5$s</string>
    <string name="vk_rv_item_not_selected">%1$s - %2$s\n%3$s</string>
    <string name="download">Download</string>
    <string name="vk_pop_up_refresh">Refresh</string>
    <string name="vk_popup_log_out">Log Out</string>
    <string name="delete">Delete</string>
    <string name="download_all">Download All</string>
    <string name="like">Like</string>
    <string name="no_artist">No Artist</string>
    <string name="delete_all">Delete All</string>
    <string name="login">Login</string>
    <string name="type">Type..</string>
    <string name="skip_previous">Skip Previous</string>
    <string name="audlayer_play">Audlayer play</string>
    <string name="skip_next">Skip Next</string>
    <string name="audlayer_cancel">Audlayer Cancel</string>
    <string name="authorize_confirmed">Authorize confirmed</string>
    <integer name="com_vk_sdk_AppId">7360134</integer>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="please_type_playlist_name">Please Type Playlist Name</string>
    <string name="choose_anyone_song">Choose anyone song</string>
    <string name="no_one_song">No one Song</string>
    <string name="not_implemented_operation">Operation not implemented: %1$s</string>
    <string name="show_incompatible_files">Show incompatible files</string>
    <string name="do_not_need_download">Don\'t need download</string>
    <string name="song_success_downloaded">Song success downloaded</string>
    <string name="album">Album</string>
    <string name="all">All</string>
    <string name="not_implemented_from_this_place">Not implemented from this place</string>
    <string name="no_name">No Name</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="password">Password</string>
    <string name="input_login">Input Login</string>
    <string name="input_password">Input password</string>
    <string name="sorry_no_link">Sorry we did not found any link</string>
</resources>
