<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/vk_fragment_shuffle"
        android:title="@string/pop_up_menu_item_shuffle"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_fragment_add_to_home_screen"
        android:title="@string/pop_up_menu_item_add_to_home_screen"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_fragment_sort_by"
        android:title="@string/pop_up_menu_item_sort_by"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_fragment_refresh"
        android:title="@string/vk_pop_up_refresh"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_fragment_log_out"
        android:title="@string/vk_popup_log_out"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_fragment_download_all"
        android:title="@string/download_all"
        app:showAsAction="ifRoom"/>
</menu>