<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/vk_rv_item_play_next"
        android:title="@string/pop_up_menu_item_play_next"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/vk_rv_item_set_as_ringtone"
        android:title="@string/pop_up_menu_item_set_as_ringtone"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_rv_item_add_to_playlist"
        android:title="@string/pop_up_menu_item_add_to_playlist"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_rv_item_add_to_home_screen"
        android:title="@string/pop_up_menu_item_add_to_home_screen"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_rv_item_download"
        android:title="@string/download"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/vk_rv_item_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>