<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/folder_recyclerView_item_isFolder_play"
        app:showAsAction="ifRoom"
        android:title="@string/pop_up_menu_item_play" />

    <item android:id="@+id/folder_recyclerView_item_isFolder_play_next"
        android:title="@string/pop_up_menu_item_play_next"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/folder_recyclerView_item_isFolder_shuffle"
        android:title="@string/pop_up_menu_item_shuffle"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/folder_recyclerView_item_isFolder_create_playlist"
        android:title="@string/pop_up_menu_item_create_playlist"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/folder_recyclerView_item_isFolder_add_to_playlist"
        android:title="@string/pop_up_menu_item_add_to_playlist"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/folder_recyclerView_item_isFolder_add_to_home_screen"
        android:title="@string/pop_up_menu_item_add_to_home_screen"
        app:showAsAction="ifRoom"/>
</menu>