<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_folder_show_incompatible_files"
        android:title="@string/pop_up_menu_item_show_incompatible_files"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_folder_add_to_home_screen"
        android:title="@string/pop_up_menu_item_add_to_home_screen"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_folder_create_playlist"
        android:title="@string/pop_up_menu_item_create_playlist"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_folder_add_to_playlist"
        android:title="@string/pop_up_menu_item_add_to_playlist"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_folder_sort_by"
        android:title="@string/pop_up_menu_item_sort_by"
        app:showAsAction="ifRoom"/>
</menu>