<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item android:id="@+id/album_sort_by_album"
            android:title="@string/pop_up_menu_item_sort_by_album"
            android:checkable="true"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/album_sort_by_artist"
            android:title="@string/pop_up_menu_item_sort_by_artist"
            android:checkable="true"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/album_sort_by_year"
            android:title="@string/pop_up_menu_item_sort_by_year"
            android:checkable="true"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/album_sort_by_number_of_tracks"
            android:title="@string/pop_up_menu_item_sort_by_number_of_tracks"
            android:checkable="true"
            app:showAsAction="ifRoom"/>

    </group>

    <group android:checkableBehavior="single">

        <item android:id="@+id/album_sort_by_ascending_order"
            android:title="@string/pop_up_menu_item_sort_by_ascending_order"
            app:showAsAction="ifRoom"/>

        <item android:id="@+id/album_sort_by_descending_order"
            android:title="@string/pop_up_menu_item_sort_by_descending_order"
            app:showAsAction="ifRoom"/>

    </group>
</menu>