<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_folder"
        android:enabled="true"
        android:icon="@drawable/menu_folder_selector"
        android:title="@string/folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_album"
        android:enabled="true"
        android:icon="@drawable/menu_album_selector"
        android:title="@string/album"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_all_song"
        android:enabled="true"
        android:icon="@drawable/menu_song_selector"
        android:title="@string/all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_radio"
        android:enabled="true"
        android:icon="@drawable/menu_radio_selector"
        android:title="@string/radio"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_vk"
        android:enabled="true"
        android:icon="@drawable/menu_vk_selector"
        android:title="@string/vk"
        app:showAsAction="ifRoom" />

</menu>