<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    style="@style/WrapHeightMatchWidth"
    android:id="@+id/mini_player_radio_container"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:contentDescription="@string/mini_player_song_image"
        android:src="@drawable/repair_tools"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        style="@style/Margin8dp"
        android:ellipsize="marquee"
        android:maxHeight="18dp"
        android:text="@string/no_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/liked"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/artist"
        />

    <TextView
        android:id="@+id/artist"
        style="@style/Wrap.Margin8dp"
        android:ellipsize="marquee"
        android:maxHeight="15dp"
        android:text="@string/no_artist"
        android:textColor="@color/mortar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageButton
        android:id="@+id/liked"
        style="@style/MiniPlayerShuffleRepeatLikedImageButtons"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/mini_player_song_liked"
        android:src="@drawable/heart_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/action_container"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/action_container"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/play_or_pause"
            style="@style/MiniPlayerTrackNextImageButtons"
            android:layout_width="70dp"
            android:contentDescription="@string/mini_player_song_play_or_pause"
            android:src="@drawable/play"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>