<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/action_bar_container"
    style="@style/WrapHeightMatchWidth"
    >

    <ImageButton
        android:id="@+id/settings"
        style="@style/TopMenuImageButtons"
        android:contentDescription="@string/action_bar_settings"
        android:layout_marginStart="16dp"
        android:src="@drawable/round_format_list_bulleted_deep_purple_a200_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/action"
        style="@style/TopMenuImageButtons"
        android:layout_width="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/action_bar_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_down_deep_purple_a200" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        style="@style/Layout0dpMargin8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:queryHint="@string/action_bar_hint_search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/action"
        app:layout_constraintStart_toEndOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        style="@style/WrapContent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>